force-app/main/default/objects/Book__c/fields/Authors__c.field-meta.xml
<CustomField>
    <fullName>Authors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authors</label>
    <referenceTo>Authors__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <type>Lookup</type>
</CustomField>