force-app/main/default/objects/Book__c/fields/Book_Summary__c.field-meta.xml
<CustomField>
    <fullName>Book_Summary__c</fullName>
    <label>Book Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>