force-app/main/default/objects/Book__c/fields/Publishers__c.field-meta.xml
<CustomField>
    <fullName>Publishers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publishers</label>
    <referenceTo>Publishers__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <type>Lookup</type>
</CustomField>