force-app/main/default/objects/Book__c/fields/Publishing_Date__c.field-meta.xml
<CustomField>
    <fullName>Publishing_Date__c</fullName>
    <description>Test</description>
    <inlineHelpText>Date it&apos;s published</inlineHelpText>
    <label>Publishing Date</label>
    <type>Date</type>
</CustomField>