force-app/main/default/objects/Book__c/fields/Total_Review_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Review_Rating__c</fullName>
    <label>Total Review Rating</label>
    <summarizedField>Review__c.Average_Rating__c</summarizedField>
    <summaryForeignKey>Review__c.Book__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>