force-app/main/default/objects/Book__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Fiction</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Politics</fullName>
            </value>
            <value>
                <fullName>Arts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>